:bug: Fix some text and background colors

--- a/frontend/resources/styles/common/base.scss
+++ b/frontend/resources/styles/common/base.scss
@@ -19,7 +19,7 @@ body {
   overflow: hidden;
 
   background-color: red; //debugger colors
-  color: #fabada; //debugger colors
+  color: yellow; //debugger colors
 }
 
 #app {
