--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -13,6 +13,8 @@
 
   --scrollbar-background-color: var(--color-foreground-secondary);
   --panel-background-color: var(--color-background-primary);
+  --app-background: var(--color-background-primary);
+  --loader-background: var(--color-background-primary);
   --panel-title-background-color: var(--color-background-secondary);
   --presence-color: var(--default-presence-color);
 
