--- a/frontend/src/app/main/ui/workspace.scss
+++ b/frontend/src/app/main/ui/workspace.scss
@@ -34,6 +34,7 @@
     justify-content: center;
     align-items: center;
     grid-area: viewport;
+    background-color: var(--loader-background);
     :global(svg#loader-pencil) {
       fill: var(--icon-foreground);
     }
