--- a/frontend/resources/styles/common/refactor/common-refactor.scss
+++ b/frontend/resources/styles/common/refactor/common-refactor.scss
@@ -34,3 +34,7 @@ $da-primary: var(--color-accent-primary);
 $da-primary-muted: var(--color-accent-primary-muted);
 $da-secondary: var(--color-accent-secondary);
 $da-tertiary: var(--color-accent-tertiary);
+
+#app {
+  background-color: var(--app-background);
+}
