:recycle: Remove new-css-system on assets tab

--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -314,3 +314,7 @@
   --viewer-thumbnail-border-color: var(--color-accent-primary);
   --viewer-thumbnail-background-color-selected: var(--color-accent-primary-muted);
 }
+
+#app {
+  background-color: var(--app-background);
+}
