--- a/frontend/src/app/main/ui/components/forms.scss
+++ b/frontend/src/app/main/ui/components/forms.scss
@@ -24,7 +24,7 @@
     cursor: pointer;
     color: var(--modal-title-foreground-color);
     text-transform: uppercase;
-
+    margin-bottom: $s-8;
     input {
       @extend .input-element;
       color: var(--input-foreground-color-active);
@@ -143,6 +143,7 @@
 
 .hint {
   @include titleTipography;
+  color: var(--modal-text-foreground-color);
   width: 99%;
 }
 
