--- a/frontend/src/app/main/ui/workspace/sidebar/history.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/history.scss
@@ -10,137 +10,137 @@
   display: flex;
   flex-direction: column;
   background-color: var(--panel-background-color);
+}
 
-  .history-toolbox-title {
+.history-toolbox-title {
+  @include flexCenter;
+  @include tabTitleTipography;
+  position: relative;
+  height: $s-32;
+  min-height: $s-32;
+  margin: $s-8 $s-8 0 $s-8;
+  border-radius: $br-8;
+  background-color: var(--panel-title-background-color);
+
+  span {
     @include flexCenter;
-    @include tabTitleTipography;
-    position: relative;
-    height: $s-32;
-    min-height: $s-32;
-    margin: $s-8 $s-8 0 $s-8;
-    border-radius: $br-8;
-    background-color: var(--panel-title-background-color);
+    flex-grow: 1;
+    color: var(--title-foreground-color-hover);
+  }
+}
 
-    span {
-      @include flexCenter;
-      flex-grow: 1;
-      color: var(--title-foreground-color-hover);
-    }
+.close-button {
+  @extend .button-tertiary;
+  position: absolute;
+  right: $s-2;
+  top: $s-2;
+  height: $s-28;
+  width: $s-28;
+  border-radius: $br-6;
+  svg {
+    @extend .button-icon;
+    stroke: var(--icon-foreground);
+  }
+}
 
-    .close-button {
-      @extend .button-tertiary;
-      position: absolute;
-      right: $s-2;
-      top: $s-2;
-      height: $s-28;
-      width: $s-28;
-      border-radius: $br-6;
+.history-entry-empty {
+  @include flexCenter;
+  flex-direction: column;
+  gap: $s-16;
+  padding: $s-28 $s-16;
+  text-align: center;
+}
+
+.history-entry-empty-icon {
+  @extend .empty-icon;
+  svg {
+    margin-left: calc(-1 * $s-2);
+  }
+}
+
+.history-entry-empty-msg {
+  @include titleTipography;
+  color: var(--title-foreground-secondary);
+}
+
+.history-entries {
+  height: 100%;
+  padding: $s-12;
+  overflow-x: hidden;
+  overflow-y: auto;
+  font-size: $fs-12;
+}
+
+.history-entry {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  min-height: $s-32;
+  margin: $s-4;
+  padding: $s-4 $s-8;
+  border: $s-2 solid transparent;
+  border-radius: $s-8;
+  background-color: var(--entry-background-color);
+  cursor: pointer;
+  transition: border 0.2s;
+
+  .history-entry-summary {
+    display: flex;
+    align-items: center;
+    .history-entry-summary-icon {
       svg {
-        @extend .button-icon;
-        stroke: var(--icon-foreground);
+        @extend .button-icon-small;
+        stroke: var(--entry-foreground-color);
+      }
+    }
+    .history-entry-summary-text {
+      margin: 0 $s-8;
+    }
+    .history-entry-summary-button {
+      opacity: $op-0;
+      margin-left: auto;
+      &.button-opened {
+        svg {
+          transform: rotate(90deg);
+        }
+      }
+      svg {
+        @extend .button-icon-small;
+        stroke: var(--entry-foreground-color);
       }
     }
   }
 
-  .history-entry-empty {
-    @include flexCenter;
-    flex-direction: column;
-    gap: $s-16;
-    padding: $s-28 $s-16;
-    text-align: center;
+  .history-entry-detail {
+    display: block;
+    padding-top: $s-16;
 
-    .history-entry-empty-icon {
-      @extend .empty-icon;
-      svg {
-        margin-left: calc(-1 * $s-2);
-      }
-    }
-
-    .history-entry-empty-msg {
-      @include titleTipography;
-      color: var(--title-foreground-secondary);
+    .history-entry-details-list {
+      margin: 0;
     }
   }
 
-  ul.history-entries {
-    height: 100%;
-    padding: $s-12;
-    overflow-x: hidden;
-    overflow-y: auto;
-    font-size: $fs-12;
+  &.disabled {
+    border-color: var(--entry-border-color-disabled);
+    background-color: var(--entry-background-color-disabled);
+  }
 
-    .history-entry {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      min-height: $s-32;
-      margin: $s-4;
-      padding: $s-4 $s-8;
-      border: $s-2 solid transparent;
-      border-radius: $s-8;
-      background-color: var(--entry-background-color);
-      cursor: pointer;
-      transition: border 0.2s;
-
-      &.disabled {
-        border-color: var(--entry-border-color-disabled);
-        background-color: var(--entry-background-color-disabled);
-      }
-
-      &.hover,
-      &:hover {
-        background-color: var(--entry-background-color-hover);
-        color: var(--entry-foreground-color-hover);
-        .history-entry-summary {
-          .history-entry-summary-icon {
-            svg {
-              stroke: var(--entry-foreground-color-hover);
-            }
-          }
-          .history-entry-summary-button {
-            opacity: $op-10;
-            &.button-opened {
-              svg {
-                transform: rotate(90deg);
-              }
-            }
-          }
+  &.hover,
+  &:hover {
+    background-color: var(--entry-background-color-hover);
+    color: var(--entry-foreground-color-hover);
+    .history-entry-summary {
+      .history-entry-summary-icon {
+        svg {
+          stroke: var(--entry-foreground-color-hover);
         }
       }
-
-      .history-entry-summary {
-        display: flex;
-        align-items: center;
-        .history-entry-summary-icon {
+      .history-entry-summary-button {
+        opacity: $op-10;
+        &.button-opened {
           svg {
-            @extend .button-icon-small;
-            stroke: var(--entry-foreground-color);
+            transform: rotate(90deg);
           }
-        }
-        .history-entry-summary-text {
-          margin: 0 $s-8;
-        }
-        .history-entry-summary-button {
-          opacity: $op-0;
-          margin-left: auto;
-          &.button-opened {
-            svg {
-              transform: rotate(90deg);
-            }
-          }
-          svg {
-            @extend .button-icon-small;
-            stroke: var(--entry-foreground-color);
-          }
-        }
-      }
-
-      .history-entry-detail {
-        display: block;
-        padding-top: $s-16;
-
-        ul.history-entry-details-list {
-          margin: 0;
         }
       }
     }
