--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
@@ -174,7 +174,7 @@
   .grid-layout-menu-title {
     flex: 1;
     font-size: $fs-11;
-    color: $df-primary;
+    color: var(--title-foreground-color-hover);
   }
 
   .edit-mode-btn {
@@ -244,9 +244,6 @@
     @extend .input-element;
     border-radius: 0;
     border-right: $s-1 solid var(--panel-background-color);
-  }
-
-  .track-info-unit {
   }
 
   .track-info-unit-selector {
