--- a/frontend/src/app/main/ui/workspace/context_menu.scss
+++ b/frontend/src/app/main/ui/workspace/context_menu.scss
@@ -112,8 +112,7 @@
 }
 
 .icon-menu-item[disabled],
-.context-menu-item[disabled]
-{
+.context-menu-item[disabled] {
   pointer-events: none;
   opacity: 0.6;
 }
