--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
@@ -174,6 +174,7 @@
   .grid-layout-menu-title {
     flex: 1;
     font-size: $fs-11;
+    color: $df-primary;
   }
 
   .edit-mode-btn {
@@ -289,7 +290,7 @@
   }
 
   .track-name {
-    color: var(--color-foreground-secondary);
+    color: $df-primary;
   }
 
   .track-detail {
@@ -297,6 +298,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     width: 100%;
+    color: $df-secondary;
   }
 
   .expand-icon {
