:recycle: Remove new-css-system from right sidebar elements

--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -305,6 +305,11 @@
   --resize-area-background-color: var(--color-background-primary);
   --resize-area-border-color: var(--color-background-quaternary);
 
+  --flow-tag-background-color: var(--color-background-tertiary);
+  --flow-tag-foreground-color: var(--color-foreground-secondary);
+  --flow-tag-background-color-hover: var(--color-accent-primary);
+  --flow-tag-foreground-color-hover: var(--color-background-primary);
+
   // VIEWER
   --viewer-background-color: var(--color-background-secondary);
   --viewer-paginator-background-color: var(--color-background-tertiary);
