:recycle: Remove new-css-system from dashboard

--- a/frontend/src/app/main/ui/workspace/sidebar/history.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/history.scss
@@ -118,6 +118,7 @@
     color: var(--modal-text-foreground-color);
     .history-entry-details-list {
       margin: 0;
+      color: var(--modal-text-foreground-color);
     }
   }
 
