:sparkles: Add delete with content option

--- a/frontend/src/app/main/ui/workspace/sidebar/history.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/history.scss
@@ -95,6 +95,7 @@
     }
     .history-entry-summary-text {
       margin: 0 $s-8;
+      color: $df-primary;
     }
     .history-entry-summary-button {
       opacity: $op-0;
