--- a/frontend/src/app/main/ui/viewer/inspect/right_sidebar.scss
+++ b/frontend/src/app/main/ui/viewer/inspect/right_sidebar.scss
@@ -58,6 +58,7 @@
         @include titleTipography;
         text-align: center;
         width: $s-200;
+        color: $df-secondary;
       }
     }
     .more-info-btn {
