:bug: Fix typography dropdown menus being clipped out in the left sidebar
Co-authored-by: Belén Albeza <belen@hey.com>

--- a/frontend/src/app/main/ui/workspace.scss
+++ b/frontend/src/app/main/ui/workspace.scss
@@ -16,14 +16,16 @@
 
 :global(:root) {
   --s-4: 0.25rem;
-  --layer-indentation-size: calc(var(--s-4) * 5);
+  --layer-indentation-size: calc(var(--s-4) * 6);
 }
 
 .workspace {
   @extend .new-scrollbar;
   width: 100vw;
-  height: 100%;
-  user-select: none;
+  height: 100vh;
+  max-height: 100vh;
+  overflow: auto; // TODO: change to hidden
+  user-select: one;
   display: grid;
   grid-template-areas: "left-sidebar viewport right-sidebar";
   grid-template-rows: 1fr;
