--- a/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
@@ -6,7 +6,12 @@
 
 @import "refactor/common-refactor.scss";
 .tool-window {
-  margin-bottom: $s-24;
+  margin-block-end: $s-24;
+  padding-inline-start: $s-12;
+  overflow-y: auto;
+  display: grid;
+  grid-auto-rows: max-content;
+  scrollbar-gutter: stable;
 }
 
 .file-name {
@@ -38,13 +43,7 @@
 }
 
 .library-content {
-  display: flex;
-  flex-direction: column;
-  height: calc(100% - $s-36);
   width: 100%;
-  overflow-y: hidden;
-  overflow-x: hidden;
-  margin-top: $s-4;
 }
 
 .asset-title {
