--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/typography.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/typography.scss
@@ -363,15 +363,13 @@
     }
     .fonts-list {
       @include menuShadow;
-      position: absolute;
-      top: $s-36;
-      left: 0;
+      position:relative;
       display: flex;
       flex-direction: column;
       flex: 1 1 auto;
       min-height: 100%;
-      height: $s-216;
       width: 100%;
+      height: 100%;
       padding: $s-2;
       border-radius: $br-8;
       background-color: var(--dropdown-background-color);
