:bug: Fix line cap select

--- a/frontend/src/app/main/ui/components/select.scss
+++ b/frontend/src/app/main/ui/components/select.scss
@@ -49,6 +49,7 @@
     .separator {
       margin: 0;
       height: $s-12;
+      border-top: 1px solid $db-primary;
     }
   }
   .checked-element {
