--- a/frontend/src/app/main/ui/workspace/colorpicker.scss
+++ b/frontend/src/app/main/ui/workspace/colorpicker.scss
@@ -8,7 +8,7 @@
 
 .colorpicker-tooltip {
   @extend .modal-background;
-  top: $s-100;
+  // top: $s-100;
   left: calc(10 * $s-140);
   width: auto;
 }
