:bug: Fix dropdown colors in the right sidebar for typography / recent

--- a/frontend/src/app/main/ui/components/tab_container.scss
+++ b/frontend/src/app/main/ui/components/tab_container.scss
@@ -21,6 +21,7 @@
   padding: $s-2;
   cursor: pointer;
   font-size: $fs-12;
+  height: 100%;
   .tab-container-tab-wrapper {
     @include flexCenter;
     flex-direction: row;
