--- a/frontend/src/app/main/ui/workspace.scss
+++ b/frontend/src/app/main/ui/workspace.scss
@@ -24,7 +24,7 @@
   width: 100vw;
   height: 100vh;
   max-height: 100vh;
-  user-select: one;
+  user-select: none;
   display: grid;
   grid-template-areas: "left-sidebar viewport right-sidebar";
   grid-template-rows: 1fr;
