--- a/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/assets/file_library.scss
@@ -6,12 +6,14 @@
 
 @import "refactor/common-refactor.scss";
 .tool-window {
-  margin-block-end: $s-24;
   padding-inline-start: $s-12;
   overflow-y: auto;
   display: grid;
   grid-auto-rows: max-content;
   scrollbar-gutter: stable;
+  &:last-child {
+    margin-block-end: $s-24;
+  }
 }
 
 .file-name {
