:recycle: Update basic color palette

--- a/frontend/src/app/main/ui/dashboard/comments.scss
+++ b/frontend/src/app/main/ui/dashboard/comments.scss
@@ -79,7 +79,7 @@
   }
 
   &:hover {
-    background-color: $db-cuaternary;
+    background-color: $db-quaternary;
 
     svg {
       stroke: $da-primary;
