--- a/frontend/src/app/main/ui/workspace/sidebar/debug_shape_info.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/debug_shape_info.scss
@@ -53,7 +53,7 @@
 .shape-title {
   font-size: $fs-14;
   padding-bottom: $s-4;
-  background: $db-cuaternary;
+  background: $db-quaternary;
   color: $df-primary;
   padding: $s-8;
   border-radius: $s-8;
