--- a/frontend/src/app/main/ui/dashboard/comments.scss
+++ b/frontend/src/app/main/ui/dashboard/comments.scss
@@ -67,8 +67,8 @@
   width: $s-32;
 
   svg {
-    min-width: $s-16;
-    min-height: $s-16;
+    width: $s-16;
+    height: $s-16;
     stroke: $df-secondary;
     fill: none;
   }
