--- a/frontend/src/app/main/ui/workspace/right_header.scss
+++ b/frontend/src/app/main/ui/workspace/right_header.scss
@@ -128,6 +128,7 @@
   margin: 0;
   height: $s-28;
   width: $s-28;
+  border: none;
   svg {
     @extend .button-icon;
     stroke: var(--icon-foreground);
@@ -140,7 +141,6 @@
   }
   &.selected {
     background-color: var(--button-tertiary-background-color-selected);
-    border: $s-2 solid var(--button-tertiary-border-color-selected);
     svg {
       stroke: var(--button-tertiary-foreground-color-active);
     }
@@ -153,6 +153,7 @@
   margin: 0;
   height: $s-28;
   width: $s-28;
+  border: none;
   svg {
     @extend .button-icon;
     stroke: var(--icon-foreground);
@@ -165,7 +166,6 @@
   }
   &.selected {
     background-color: var(--button-tertiary-background-color-selected);
-    border: $s-2 solid var(--button-tertiary-border-color-selected);
     svg {
       stroke: var(--button-tertiary-foreground-color-active);
     }
@@ -218,6 +218,7 @@
   margin: 0;
   width: $s-28;
   height: $s-28;
+  border: none;
   svg {
     @extend .button-icon;
     height: $s-16;
@@ -226,5 +227,6 @@
   }
   &:hover {
     background-color: transparent;
+    border: none;
   }
 }
