--- a/frontend/src/app/main/ui/workspace/sidebar/debug_shape_info.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/debug_shape_info.scss
@@ -12,6 +12,7 @@
   background-color: var(--panel-background-color);
   color: white;
   font-size: $fs-12;
+  user-select: text;
 }
 
 .shape-info-title {
