--- a/frontend/src/app/main/ui/workspace/sidebar/debug_shape_info.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/debug_shape_info.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--panel-background-color);
-  color: white;
+  color: $df-primary;
   font-size: $fs-12;
   user-select: text;
 }
